# kraken-discord-bot

./: .gitignore  LICENSE  README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
kraken_discord/: __init__.py  bot.py  config.py  parsers.py  presets.py  rate_limiter.py  utils.py
web/: index.js
workflow/: Kraken Discord AIO v2.json  Kraken Discord Bot AiO.json
