[project]
name = "kraken-discord-bot"
description = "All-in-one Discord bot node for AI image generation. Simple setup - just add token, select model, and queue. Includes style presets, rate limiting, and queue management."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["discord.py>=2.0.0", "requests>=2.28.0"]

[project.urls]
Repository = "https://github.com/krakenunbound/kraken-discord-bot"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/krakenunbound/kraken-discord-bot/wiki"
"Bug Tracker" = "https://github.com/krakenunbound/kraken-discord-bot/issues"

[tool.comfy]
PublisherId = "krakenunbound"
DisplayName = "Kraken Discord Bot"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

